# Idle_Game_Rust

./: Cargo.toml
src/: game_types.rs  gui.rs  main.rs  production.rs  world.rs
