[package]
name = "Idle_Game_Rust"
version = "0.1.0"
authors = ["Mitchell Fream <m1fream@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"
arrayvec = "0.7.1"
eframe = "0.12.0"